# jobson

./: Dockerfile  README.MD  README.md  docker-compose.yml  pyproject.toml  supervisord.conf
DATA/: FINAL.csv  ORIGINAL.csv
Docker/: Dockerfile.Streamlit
app/: config.py  main.py
app/database/: mongo_client.py
app/repositories/: job_data_repository.py  serp_api_repository.py
app/routes/: default_router.py
jobson-client/: package-lock.json  package.json
public/: PATHS.py  main.py  utils.py  💸 Empregos.py  📊 Sobre.py  🚀 Time.py  🛠️ Habilidades.py
public/assets/: styles.css
public/modules/: formater.py  importer.py
public/views/: Empregos.py  Habilidades.py  Sobre.py  Time.py
server/: Dockerfile  SERVER.py  __init__.ipynb  docker-compose.yml  pyproject.toml
server/DATA/: job_data.json
server/app/: config.py  main.py
server/app/database/: database_manager.py  mongo_client.py
server/app/repositories/: serp_api_repository.py
server/app/use_cases/: job_fetcher.py
tests/: test_serp_api_repository.py
